spade-tests/src/snapshots/spade_tests__domain_inference__mixed_domain_array_literal_is_error.snap
---
source: spade-tests/src/domain_inference.rs
---
fn test<'a, 'b>(a: 'a bool, b: 'b bool) -> 'a [bool; 2] {
    [a, b]
}


error: Domain mismatch, expected 'a, but it is in 'b
  ┌─ testinput:2:9
  │
2 │     [a, b]
  │      -  ^ Expected domain 'a, found 'b
  │      │   
  │      The domain of the first element is 'a
  │
  = note: All array elements need to be in the same domain
