spade-tests/src/snapshots/spade_tests__domain_inference__mixed_signals_cannot_be_put_in_a_register.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(clk: clock, a: 'a bool, b: 'b bool) {
    reg(clk) x = (a, b);
}


error: A value in the ('a, 'b) domain cannot be stored in a register.
  ┌─ testinput:2:18
  │
2 │     reg(clk) x = (a, b);
  │                  ^^^^^^ ('a, 'b) in a register
  │
  = help: Values stored in registers must have a clock
  = note: Tuples can only be stored in registers if all elements have a common domain
