spade-tests/src/snapshots/spade_tests__domain_inference__mixing_two_domains_with_tuples.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a bool, b: 'b bool) -> 'a (bool, bool) {
    (a, b)
}

error: Mixing signals in different domains
  ┌─ testinput:2:9
  │
2 │     (a, b)
  │      -  ^ This has domain 'b
  │      │   
  │      This has domain 'a
  │
  = help: All tuple members must be in the same domain
