spade-tests/src/snapshots/spade_tests__domain_inference__range_index_expression_mixing_domains.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a, 'b>(a: 'a [bool; 2]) -> 'b [bool; 1] {
    a[0..1]
}

error: Mixing signals in different domains
  ┌─ testinput:2:5
  │
1 │ entity test<'a, 'b>(a: 'a [bool; 2]) -> 'b [bool; 1] {
  │                                            --------- This has domain 'b
2 │     a[0..1]
  │     ^^^^^^^ This has domain 'a
