spade-tests/src/snapshots/spade_tests__domain_inference__register_clock_must_match.snap
---
source: spade-tests/src/domain_inference.rs
---
entity test<'a: NoClock, 'b>(clk: 'a clock, a: 'b bool) {
    reg(clk) r = a;
}


error: Mixing signals in different domains
  ┌─ testinput:2:9
  │
2 │     reg(clk) r = a;
  │         ^^^      - This has domain 'b
  │         │         
  │         This has domain 'a
